--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-DB.keyspace=game
+DB.keyspace=db
 DB.preparedStatementCacheSize=1000
 DB.session.contactPoint=127.0.0.1
 DB.session.queryOptions.consistencyLevel=ONE
